--- a/Project_4/package.json
+++ b/Project_4/package.json
@@ -9,13 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bitcoinjs-lib": "^2.3.0",
     "bitcoinjs-message": "^2.0.0",
     "body-parser": "^1.19.0",
     "crypto-js": "^3.1.9-1",
     "express": "^4.16.4",
-    "hex2ascii": "^0.0.3",
-    "level": "^5.0.1",
-    "secp256k1": "^3.7.0"
-  },
-  "devDependencies": {}
+    "hex2ascii": "0.0.3",
+    "level": "^5.0.1"
+  }
 }
